# yahya_mortassim_use_case

./: .gitignore  accessAPIlufthansa.py  docker-compose.yaml  readme.md  requirements.txt  setup.cfg
dags/: 0_drugs_processing.py
dags/output_files/: drugs_file.json
servier_use_case/: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg
servier_use_case/dags/: 0_drugs_processing.py  constants.py  dag_dummy.py  helper.py  process.py
servier_use_case/dags/output_files/: drugs_file_1666771654.264594.json
servier_use_case/dags/tests/: test_process.py
src/: adhoc.py  helpers.py  process.py
tests/: test_helpers.py  test_process.py
