[metadata]
name = servier_use_case
url = https://github.com/yahyamortassim
description = Servier Python technical test

[options]
packages = servier_use_case
setup_requires = pytest_runner
install_requires =
    pandas
    
tests_require =
    -r requirements.txt
    pylint
    pytest
    pytest-black
    pytest-pylint
    pytest-env

[tool:pytest]
addopts = --pylint --black --cov servier_use_case --ignore-glob=venv/*
norecursedirs = ./tests .eggs
[pycodestyle]
ignore = venv/* ALL
