[metadata]
name = dags
url = https://github.com/YahyaMorta/yahya_mortassim_use_case/servier_use_case/dags
description = Servier Python technical test

[options]
packages = dags
setup_requires = pytest_runner
install_requires =
    pandas
    apache-airflow
    pydantic
tests_require =
    -r requirements.txt
    pylint
    pytest
    pytest-black
    pytest-pylint
    pytest-env

[tool:pytest]
addopts = --pylint --black --cov dags --ignore-glob=venv/*
norecursedirs = ./tests .eggs
[pycodestyle]
ignore = venv/* ALL
